<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendSMS">

    <ImageView
        android:id="@+id/messagePic"
        android:background="@drawable/ic_message_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:id="@+id/enterMessage"
        android:hint="@string/enter_message"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/messagePic"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <EditText
        android:id="@+id/enterNumber"
        android:hint="@string/phone_num"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterMessage"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <Button
        android:id="@+id/sendButton"
        android:text="@string/send"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/enterNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>