<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoiceRecord">

    <ImageView
        android:id="@+id/micPic"
        android:background="@drawable/ic_mic_black_24dp"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/recordAudio"
        android:text="@string/record_audio"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:background="@color/turquoise"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/micPic"
        />
    <Button
        android:id="@+id/stopRecord"
        android:text="@string/stop_recording"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:background="@color/turquoise"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/recordAudio"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/micPic"
        />

    <Button
        android:id="@+id/listenAudio"
        android:text="@string/listen"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:background="@color/turquoise"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/stopRecord"
        />

</RelativeLayout>